src/core/compile.h


typedef enum {
    JANET_C_LINT_RELAXED,
    JANET_C_LINT_NORMAL,
    JANET_C_LINT_STRICT
} JanetCompileLintLevel;
typedef enum {
    JANETC_SHADOW_NONE,
    JANETC_SHADOW_MACRO,
    JANETC_SHADOW_GLOBAL_HIDES_GLOBAL,
    JANETC_SHADOW_LOCAL_HIDES_GLOBAL,
    JANETC_SHADOW_LOCAL_HIDES_LOCAL
} Shadowing;
typedef struct JanetCompiler JanetCompiler;
typedef struct JanetScope JanetScope;
typedef struct JanetSlot JanetSlot;
typedef struct JanetFopts JanetFopts;
typedef struct JanetFunOptimizer JanetFunOptimizer;
typedef struct JanetSpecial JanetSpecial;
struct JanetSlot {
    Janet constant; 
    int32_t index;
    int32_t envindex; 
    uint32_t flags;
};
typedef struct SymPair {
    JanetSlot slot;
    const uint8_t *sym;
    const uint8_t *sym2;
    int keep;
    int referenced; 
    uint32_t birth_pc;
    uint32_t death_pc;
} SymPair;
typedef struct JanetEnvRef {
    int32_t envindex;
    JanetScope *scope;
} JanetEnvRef;
struct JanetScope {
    const char *name;
    JanetScope *parent;
    JanetScope *child;
    Janet *consts;
    SymPair *syms;
    JanetFuncDef **defs;
    JanetcRegisterAllocator ra;
    JanetcRegisterAllocator ua;
    JanetEnvRef *envs;
    int32_t bytecode_start;
    int flags;
};
struct JanetCompiler {
    JanetScope *scope;
    uint32_t *buffer;
    JanetSourceMapping *mapbuffer;
    JanetTable *env;
    const uint8_t *source;
    JanetCompileResult result;
    JanetSourceMapping current_mapping;
    int recursion_guard;
    JanetArray *lints;
    int is_redef;
};
struct JanetFopts {
    JanetCompiler *compiler;
    JanetSlot hint;
    uint32_t flags; 
};
struct JanetFunOptimizer {
    int (*can_optimize)(JanetFopts opts, JanetSlot *args);
    JanetSlot(*optimize)(JanetFopts opts, JanetSlot *args);
};
struct JanetSpecial {
    const char *name;
    JanetSlot(*compile)(JanetFopts opts, int32_t argn, const Janet *argv);
};
Shadowing janetc_shadowcheck(JanetCompiler *c, const uint8_t *sym);