src/core/state.h

typedef int64_t JanetTimestamp;
typedef struct {
    JanetTimestamp when;
    JanetFiber *fiber;
    JanetFiber *curr_fiber;
    uint32_t sched_id;
    int is_error;
    int has_worker;
#ifdef JANET_WINDOWS
    HANDLE worker;
    HANDLE worker_event;
#else
    pthread_t worker;
#endif
} JanetTimeout;
typedef struct {
    JanetCFunction cfun;
    const char *name;
    const char *name_prefix;
    const char *source_file;
    int32_t source_line;
} JanetCFunRegistry;
typedef enum {
    JANET_SIGNAL_PLAN_TOP_LEVEL = 0,
    JANET_SIGNAL_PLAN_RAISE = 1,
    JANET_SIGNAL_PLAN_COERCE = 2
} JanetSignalPlan;
typedef enum {
    JANET_TRACE_NAME_NONE = 0,
    JANET_TRACE_NAME_ANONYMOUS = 1,
    JANET_TRACE_NAME_FUNCTION = 2,
    JANET_TRACE_NAME_CFUNCTION = 3,
    JANET_TRACE_NAME_CFUNCTION_BARE = 4
} JanetTraceName;
typedef enum {
    JANET_TRACE_LOC_NONE = 0,
    JANET_TRACE_LOC_SOURCEMAP = 1,
    JANET_TRACE_LOC_PC = 2,
    JANET_TRACE_LOC_CFUN_LINE = 3
} JanetTraceLoc;
typedef struct {
    const char *name;         
    const char *name_prefix;  
    const char *source;       
    int32_t pc;               
    int32_t line;             
    int32_t column;           
    uint8_t name_kind;        
    uint8_t loc_kind;         
    uint8_t tail;             
} JanetTraceFrame;
typedef enum {
    JANET_ARG_EXPECT_NAT = 0,   
    JANET_ARG_EXPECT_SIZE = 1,  
    JANET_ARG_EXPECT_S32 = 2,   
    JANET_ARG_EXPECT_U32 = 3,   
    JANET_ARG_EXPECT_S16 = 4,   
    JANET_ARG_EXPECT_U16 = 5,   
    JANET_ARG_EXPECT_S8 = 6,    
    JANET_ARG_EXPECT_U8 = 7,    
    JANET_ARG_EXPECT_FLOAT = 8, 
    JANET_ARG_EXPECT_S64 = 9,   
    JANET_ARG_EXPECT_U64 = 10   
} JanetArgExpect;
typedef enum {
    JANET_ARG_OK = 0,
    JANET_ARG_TYPE = 1,
    JANET_ARG_ABSTRACT = 2,
    JANET_ARG_EXPECT = 3,
    JANET_ARG_RANGE_INCLUSIVE = 4,
    JANET_ARG_RANGE_EXCLUSIVE = 5,
    JANET_ARG_FLAG = 6,
    JANET_ARG_ZEROS = 7,
    JANET_ARG_ARITY_FIX = 8,
    JANET_ARG_ARITY_MIN = 9,
    JANET_ARG_ARITY_MAX = 10
} JanetArgFaultKind;
typedef struct {
    uint8_t kind;                 
    uint8_t expect;               
    int32_t slot;                 
    int32_t typeflags;            
    const JanetAbstractType *at;  
    const char *which;            
    const char *flags;            
    int64_t raw;                  
    int64_t lo;
    int64_t hi;
    int32_t arity;                
    int32_t bound;
} JanetArgFault;
typedef enum {
    JANET_ARG_BYTES_FAULT = 0,
    JANET_ARG_BYTES_STRING = 1,
    JANET_ARG_BYTES_BUFFER = 2,
    JANET_ARG_BYTES_ABSTRACT = 3
} JanetArgBytes;
typedef enum {
    JANET_ARG_CBYTES_FAULT = 0,
    JANET_ARG_CBYTES_COPY = 1,
    JANET_ARG_CBYTES_TERMINATE = 2,
    JANET_ARG_CBYTES_VIEW = 3
} JanetArgCBytes;