src/zig/types.zig

/// `state.h` gives the waiter thread two `HANDLE`s on Windows and one
/// `pthread_t` elsewhere, so this is 56 bytes there and 48 here.
pub const JanetTimeout = if (builtin.os.tag == .windows) extern struct {
    when: JanetTimestamp = 0,
    fiber: ?*JanetFiber = null,
    curr_fiber: ?*JanetFiber = null,
    sched_id: u32 = 0,
    is_error: c_int = 0,
    has_worker: c_int = 0,
    worker: ?*anyopaque = null,
    worker_event: ?*anyopaque = null,
} else extern struct {
    when: JanetTimestamp = 0,
    fiber: ?*JanetFiber = null,
    curr_fiber: ?*JanetFiber = null,
    sched_id: u32 = 0,
    is_error: c_int = 0,
    has_worker: c_int = 0,
    worker: pthread_t = std.mem.zeroes(pthread_t),
};
pub const JanetCFunRegistry = extern struct {
    cfun: JanetCFunction = null,
    name: ?[*:0]const u8 = null,
    name_prefix: ?[*:0]const u8 = null,
    source_file: ?[*:0]const u8 = null,
    source_line: i32 = 0,
};
pub const JanetSignalPlan = c_uint;
pub const JanetTraceName = c_uint;
pub const JanetTraceLoc = c_uint;
pub const JanetTraceFrame = extern struct {
    name: ?[*:0]const u8 = null,
    name_prefix: ?[*:0]const u8 = null,
    source: ?[*:0]const u8 = null,
    pc: i32 = 0,
    line: i32 = 0,
    column: i32 = 0,
    name_kind: u8 = 0,
    loc_kind: u8 = 0,
    tail: u8 = 0,
};
pub const JanetArgExpect = c_uint;
pub const JanetArgFaultKind = c_uint;
pub const JanetArgFault = extern struct {
    kind: u8 = 0,
    expect: u8 = 0,
    slot: i32 = 0,
    typeflags: i32 = 0,
    at: ?*const JanetAbstractType = null,
    which: [*]const u8,
    flags: [*]const u8,
    raw: i64 = 0,
    lo: i64 = 0,
    hi: i64 = 0,
    arity: i32 = 0,
    bound: i32 = 0,
};
pub const JanetArgBytes = c_uint;
pub const JanetArgCBytes = c_uint;
pub const JanetMemoryType = c_uint;
pub const JanetcRegisterTemp = c_uint;
pub const JanetcRegisterAllocator = extern struct {
    chunks: ?[*]u32 = null,
    count: i32 = 0,
    capacity: i32 = 0,
    max: i32 = 0,
    regtemps: i32 = 0,
};
pub const JanetCompileLintLevel = c_uint;
pub const JanetSlot = extern struct {
    constant: Janet = std.mem.zeroes(Janet),
    index: i32 = 0,
    envindex: i32 = 0,
    flags: u32 = 0,
};
pub const JanetEnvRef = extern struct {
    envindex: i32 = 0,
    scope: ?*JanetScope = null,
};
pub const JanetScope = extern struct {
    name: [*]const u8,
    parent: ?*JanetScope = null,
    child: ?*JanetScope = null,
    consts: ?[*]Janet = null,
    syms: ?[*]SymPair = null,
    defs: ?[*]*JanetFuncDef = null,
    ra: JanetcRegisterAllocator = std.mem.zeroes(JanetcRegisterAllocator),
    ua: JanetcRegisterAllocator = std.mem.zeroes(JanetcRegisterAllocator),
    envs: ?[*]JanetEnvRef = null,
    bytecode_start: i32 = 0,
    flags: c_int = 0,
};
pub const JanetCompiler = extern struct {
    scope: ?*JanetScope = null,
    buffer: ?[*]u32 = null,
    mapbuffer: ?[*]JanetSourceMapping = null,
    env: ?*JanetTable = null,
    source: ?[*:0]const u8 = null,
    result: JanetCompileResult = std.mem.zeroes(JanetCompileResult),
    current_mapping: JanetSourceMapping = std.mem.zeroes(JanetSourceMapping),
    recursion_guard: c_int = 0,
    lints: ?*JanetArray = null,
    is_redef: c_int = 0,
};
pub const JanetFopts = extern struct {
    compiler: *JanetCompiler,
    hint: JanetSlot = std.mem.zeroes(JanetSlot),
    flags: u32 = 0,
};
pub const JanetFunOptimizer = extern struct {
    can_optimize: ?*const fn (opts: JanetFopts, args: ?[*]JanetSlot) callconv(.c) c_int = null,
    optimize: ?*const fn (opts: JanetFopts, args: ?[*]JanetSlot) callconv(.c) JanetSlot = null,
};
pub const JanetSpecial = extern struct {
    name: [*]const u8,
    compile: ?*const fn (opts: JanetFopts, argn: i32, argv: [*]const Janet) callconv(.c) JanetSlot = null,
};
pub const JanetZigLine = extern struct {
    bytes: ?[*]u8 = null,
    length: i32 = 0,
};

/// `compile.h`'s shadowing verdict, which `janetc_shadowcheck` returns.
///
/// **Missed by increment 3**, which swept the translation for `Janet`-prefixed
/// names and so collected `Consumer` and `SymPair` -- both spelled at their
/// call sites as `c.Consumer` and `c.SymPair` -- but not this one. The gap was
/// found by increment 4 enumerating every `c.<name>` the tree spells rather
/// than every `c.Janet*`. `phase_12.md`'s rule 17: a population named by a
/// prefix is a population measured over the prefix.
pub const Shadowing = c_uint;

pub const SymPair = extern struct {
    slot: JanetSlot = std.mem.zeroes(JanetSlot),
    sym: ?[*:0]const u8 = null,
    sym2: ?[*:0]const u8 = null,
    keep: c_int = 0,
    referenced: c_int = 0,
    birth_pc: u32 = 0,
    death_pc: u32 = 0,
};

// ---------------------------------------------------------------------------
// The heads, and where a payload begins
//
// Not translate-c's. This is the one hand-written section of this file, and it
// exists because the four heads above are the only declarations here that
// something has to *do* arithmetic with.
//
// A string, tuple, struct or abstract is one allocation holding a head
// followed by its payload, and the value Janet passes around is the address of
// the payload -- `DESIGN.md` §3. The head is recovered by subtracting the
// payload's offset within that allocation, and the allocator adds the same
// offset to reach the payload it just made room for.
//
// **That offset is `@offsetOf`, and saying so is what this section is for.**
// Twenty-one copies of this arithmetic were scattered across `src/zig` and
// three more across `test/`, every one of them spelling the offset `@sizeOf`
// of the head and every one carrying a comment explaining why: translate-c
// drops the flexible array member C takes the offset of, so Zig could not
// spell `@offsetOf`, and `test/abi.c` asserted from C -- the only place that
// could still ask -- that the two agree.
//
// That was true of `@cImport`'s heads. It stopped being true at increment 5b,
// when these definitions became Zig's own: `_data` is an ordinary field here
// and `@offsetOf` takes its offset exactly. The equality that needed a C
// static assertion is now the definition. Where `@sizeOf` and `@offsetOf`
// could differ -- a head whose last field leaves padding before an element
// more strictly aligned -- the offset is right and the size is wrong, so this
// is a correction and not only a tidying, even though the two agree on every
// layout Claret builds today.
//
// `test/gc_mark.zig` and `test/utils.zig` still spell `@sizeOf` and are left
// alone deliberately. They compare the offset the allocator *actually used*
// against the other spelling, which is the cross-check `test/abi.c` was
// carrying, now in Zig and on every target the matrix builds. Converting them
// would compare the constant with itself.
// ---------------------------------------------------------------------------

pub const string_payload = @offsetOf(JanetStringHead, "_data");
pub const tuple_payload = @offsetOf(JanetTupleHead, "_data");
pub const struct_payload = @offsetOf(JanetStructHead, "_data");
pub const abstract_payload = @offsetOf(JanetAbstractHead, "_data");

/// Recover a string's head from the bytes Janet passes around. Symbols and
/// keywords are strings and use this too.
pub inline fn stringHead(s: [*]const u8) *JanetStringHead {
    return @ptrFromInt(@intFromPtr(s) -% string_payload);
}

/// Recover a tuple's head from its slot array.
pub inline fn tupleHead(t: [*]const Janet) *JanetTupleHead {
    return @ptrFromInt(@intFromPtr(t) -% tuple_payload);
}

/// Recover a struct's head from its bucket array.
pub inline fn structHead(st: [*]const JanetKV) *JanetStructHead {
    return @ptrFromInt(@intFromPtr(st) -% struct_payload);
}

/// Recover an abstract's head from its payload. The parameter is
/// `?*const anyopaque` rather than `JanetAbstract` so that a `*const` caller
/// needs no cast; the head itself is mutable, as every caller marks or frees
/// through it.
pub inline fn abstractHead(a: ?*const anyopaque) *JanetAbstractHead {
    return @ptrFromInt(@intFromPtr(a) -% abstract_payload);
}

/// And the four inverses, for a block the allocator has just returned. Each
/// takes a `*const` head and hands back a mutable payload: the allocator's
/// caller has to write through it, and a const head is what a comparison or a
/// hash holds. `janet.h`'s macros make the same trade by being macros.
pub inline fn stringData(hd: *const JanetStringHead) [*]u8 {
    return @ptrFromInt(@intFromPtr(hd) +% string_payload);
}

pub inline fn tupleData(hd: *const JanetTupleHead) [*]Janet {
    return @ptrFromInt(@intFromPtr(hd) +% tuple_payload);
}

pub inline fn structData(hd: *const JanetStructHead) [*]JanetKV {
    return @ptrFromInt(@intFromPtr(hd) +% struct_payload);
}

pub inline fn abstractData(hd: *const JanetAbstractHead) ?*anyopaque {
    return @ptrFromInt(@intFromPtr(hd) +% abstract_payload);
}

/// **And the fifth flexible array, which is not a head.** `JanetFunction`
/// carries its captured environments in the same allocation, so
/// `func.envs[i]` is the same arithmetic -- but the value Janet passes around
/// is the address of the *struct*, not of the payload, so nothing subtracts
/// and no negative offset appears anywhere. `DESIGN.md` §3's rule: point at
/// the payload only when the payload has to be raw, and an environment array
/// does not.
///
/// It is grouped here because it shared the four heads' stale justification
/// rather than their shape -- four private copies wrote
/// `@sizeOf(JanetFunction)` for this offset and said `@offsetOf` was
/// unavailable. `test/abi.c` groups it with them too, as the fifth of its five
/// assertions.
pub const function_envs = @offsetOf(JanetFunction, "_envs");

/// `func->envs`, as an array the caller indexes. Both shapes the tree wants
/// come off it: `envsOf(f)[i]` is the environment and `&envsOf(f)[i]` is the
/// slot a marshaller writes through.
pub inline fn envsOf(func: *JanetFunction) [*]?*JanetFuncEnv {
    return @ptrFromInt(@intFromPtr(func) +% function_envs);
}
